--- a/index.html
+++ b/index.html
@@ -29,15 +29,30 @@
     <div id="page2">
         <div class="box">
             <h1>headings</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, repudiandae voluptatibus facere hic ipsa harum aspernatur aliquam adipisci repellendus laboriosam?</p>
+            <p>1. Why don't scientists trust atoms?
+                Because they make up everything!
+                <br>
+               2. Parallel lines have so much in common.
+                It's a shame they'll never meet.</p>
         </div>
         <div class="box">
             <h1>headings</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, repudiandae voluptatibus facere hic ipsa harum aspernatur aliquam adipisci repellendus laboriosam?</p>
+            <p>
+                3. Did you hear about the mathematician who's afraid of negative numbers?
+                He'll stop at nothing to avoid them!
+                <br>
+                4. What do you call a fake noodle?
+                An "impasta"!</p>
         </div>
         <div class="box">
             <h1>headings</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, repudiandae voluptatibus facere hic ipsa harum aspernatur aliquam adipisci repellendus laboriosam?</p>
+            <p>5. Why don't skeletons fight each other?
+                They don't have the guts.
+                <br>
+                6. Why did the scarecrow win an award?
+                Because he was outstanding in his field!
+                <br>
+            </p>
         </div>
     </div>
     
